plugins {
    id 'java'
    id 'application'
}

group 'com.revolut'
version '1.0-SNAPSHOT'

sourceCompatibility = 11

mainClassName = 'com.revolut.solution.Application'
applicationDefaultJvmArgs = ['--add-opens', 'java.base/java.lang=ALL-UNNAMED']

repositories {
    jcenter()
}

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
}

dependencies {
    //database in-memory implementation
    compile "com.h2database:h2:1.3.148"
    //improved database interface
    compile "org.jdbi:jdbi3-core:3.10.1"
    compile "org.jdbi:jdbi3-sqlobject:3.10.1"
    //web framework
    compile 'io.javalin:javalin:3.5.0'
    //json handling
    compile "com.fasterxml.jackson.core:jackson-databind:2.10.0.pr1"
    //logging
    compile "org.slf4j:slf4j-simple:1.7.26"
    //loghweight di
    compile "com.google.inject:guice:4.2.2"

    compileOnly 'org.projectlombok:lombok:1.18.10'
    annotationProcessor 'org.projectlombok:lombok:1.18.10'

    testCompile "org.mockito:mockito-core:2.+"
    testImplementation 'io.rest-assured:rest-assured:4.1.2'
    testImplementation("org.junit.jupiter:junit-jupiter-api:5.5.2")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.5.2")
}
